examples/errors/too_large.spl
Int large = 9223372036854775808; 